<resources>
    <string name="app_name">UAS_PBP_RMC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silvermember_underline"><u>Silver Member</u></string>
    <string name="hp_second">HP SECOND</string>
    <string name="name">Kelompok 14</string>
    <string name="username">kel14</string>
    <string name="age">20</string>
    <string name="address">Jl. Berbeda-beda Tetap Satu</string>
    <string name="view_title_home">Home</string>
    <string name="view_title_cart">Cart</string>
    <string name="view_title_profil">Profil</string>
    <string name="view_title_detail">Product Info</string>
    <string name="view_title_location">Location</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>